--- a/Coded.Events.WebApi/Web.config
+++ b/Coded.Events.WebApi/Web.config
@@ -36,7 +36,7 @@ http://msdn2.microsoft.com/en-us/library/b5ysx397.aspx
         <httpRuntime targetFramework="4.6.1" />
     </system.web>
     <connectionStrings>
-        <add name="DefaultConnection" connectionString="Data Source=127.0.0.1;Initial Catalog=CodedDB;User ID=SA;Password=YourStrong!Passw0rd;MultipleActiveResultSets=True" providerName="System.Data.SqlClient" />
+        <add name="DefaultConnection" connectionString="Data Source=codeddb.cyqai85cs5qy.us-east-2.rds.amazonaws.com;Initial Catalog=CodedDB;User ID=SA;Password=C0d3dEv3nts;MultipleActiveResultSets=True" providerName="System.Data.SqlClient" />
     </connectionStrings>
     <appSettings>
         <add key="emailService:Account" value="" />
